--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
    <!--Please make sure to enter your IP address(xx.xxx.xxx.xxx) where mockApi
    is running do not enter forward slash or backslash
    at the end of this string -->
-    <string name="base_url">http://190.166.67.257:8080/deliveries</string>
+    <string name="base_url">https://mock-api-mobile.dev.lalamove.com/deliveries</string>
 </resources>
